--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,6 +10,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640"/>
+        <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
+        <PackageReference Include="Prism.DryIoc.Extensions" Version="8.0.62" />
+        <PackageReference Include="Prism.Forms" Version="8.1.97" />
+        <PackageReference Include="Prism.Forms.Extended" Version="8.0.62" />
+        <PackageReference Include="ReactiveUI.Fody" Version="14.1.1" />
+        <PackageReference Include="Shiny.Core" Version="2.1.0.2769" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     </ItemGroup>
 </Project>
