--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -16,7 +16,17 @@
         <PackageReference Include="Prism.Forms.Extended" Version="8.0.62" />
         <PackageReference Include="ReactiveUI.Fody" Version="14.1.1" />
         <PackageReference Include="Shiny.Core" Version="2.1.0.2769" />
+        <PackageReference Include="Shiny.Integrations.Sqlite" Version="2.1.0.2769" />
+        <PackageReference Include="Shiny.Notifications" Version="2.1.0.2769" />
         <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Infrastructure" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\ApplicationCore.App\ApplicationCore.App.csproj" />
     </ItemGroup>
 </Project>
