--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -20,10 +20,7 @@
         <PackageReference Include="Shiny.Notifications" Version="2.1.0.2769" />
         <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Infrastructure" />
+        <PackageReference Include="XF.Material" Version="1.7.8" />
     </ItemGroup>
 
     <ItemGroup>
