--- a/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
+++ b/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
@@ -11,4 +11,10 @@
       <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>C:\Program Files (x86)\Microsoft\Xamarin\NuGet\xamarin.forms\5.0.0.2012\lib\netstandard2.0\Xamarin.Forms.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
