--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Shiny.Core" Version="2.1.0.2769" />
         <PackageReference Include="Shiny.Integrations.Sqlite" Version="2.1.0.2769" />
         <PackageReference Include="Shiny.Notifications" Version="2.1.0.2769" />
+        <PackageReference Include="Shiny.Prism" Version="8.0.62" />
         <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="XF.Material" Version="1.7.8" />
