--- a/src/IndoorNav/Libs.Beacons/Libs.Beacons.csproj
+++ b/src/IndoorNav/Libs.Beacons/Libs.Beacons.csproj
@@ -254,14 +254,18 @@
         <Compile Include="IBeaconMonitorDelegate.cs" />
         <Compile Include="IBeaconMonitoringManager.cs" />
         <Compile Include="IBeaconRangingManager.cs" />
+        <Compile Include="Managed\Domain\Point.cs" />
+        <Compile Include="Managed\Domain\RangeBle.cs" />
         <Compile Include="Managed\Flows\FilterFlow\FilterBeaconExt.cs" />
         <Compile Include="Managed\Flows\TrilaterationFlow\ManagedSphere.cs" />
-        <Compile Include="Managed\Flows\TrilaterationFlow\Point.cs" />
         <Compile Include="Managed\Flows\TrilaterationFlow\Sphere.cs" />
+        <Compile Include="Managed\Flows\TrilaterationFlow\SphereExt.cs" />
+        <Compile Include="Managed\Flows\TrilaterationFlow\SphereFactory.cs" />
         <Compile Include="Managed\Flows\TrilaterationFlow\TrillaterationBeaconExt.cs" />
         <Compile Include="Managed\ManagedScan.cs" />
         <Compile Include="Managed\Options\BeaconOption.cs" />
         <Compile Include="Models\Beacon.cs" />
+        <Compile Include="Models\BeaconId.cs" />
         <Compile Include="Models\BeaconRegion.cs" />
         <Compile Include="Models\BeaconRegionState.cs" />
         <Compile Include="Models\ExtBeacon.cs" />
