Add new prj "UseCase.Trilateration"

--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -31,5 +31,6 @@
       <ProjectReference Include="..\..\ApplicationCore.App\ApplicationCore.App.csproj" />
       <ProjectReference Include="..\..\Libs.Beacons\Libs.Beacons.csproj" />
       <ProjectReference Include="..\..\Libs.BluetoothLE\Libs.BluetoothLE.csproj" />
+      <ProjectReference Include="..\..\UseCase.Trilateration\UseCase.Trilateration.csproj" />
     </ItemGroup>
 </Project>
