Add Csv generated file in ManagedScan

--- a/src/IndoorNav/Test.UnitTests/Test.UnitTests.csproj
+++ b/src/IndoorNav/Test.UnitTests/Test.UnitTests.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-
         <IsPackable>false</IsPackable>
+        <RootNamespace>Test.Beacons</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,6 +24,12 @@
     <ItemGroup>
       <ProjectReference Include="..\Libs.Beacons\Libs.Beacons.csproj" />
       <ProjectReference Include="..\Libs.BluetoothLE\Libs.BluetoothLE.csproj" />
+      <ProjectReference Include="..\UseCase.Trilateration\UseCase.Trilateration.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Data" />
+      <Folder Include="Moq" />
     </ItemGroup>
 
 </Project>
