--- a/src/IndoorNav/UseCase.Trilateration/UseCase.Trilateration.csproj
+++ b/src/IndoorNav/UseCase.Trilateration/UseCase.Trilateration.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Libs.Beacons\Libs.Beacons.csproj" />
+      <ProjectReference Include="..\Libs.Excel\Libs.Excel.csproj" />
     </ItemGroup>
 
     <ItemGroup>
