--- a/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
+++ b/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
@@ -18,6 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ApplicationCore.Domain\ApplicationCore.Domain.csproj" />
+      <ProjectReference Include="..\ApplicationCore.Shared\ApplicationCore.Shared.csproj" />
       <ProjectReference Include="..\Libs.Beacons\Libs.Beacons.csproj" />
       <ProjectReference Include="..\Libs.BluetoothLE\Libs.BluetoothLE.csproj" />
     </ItemGroup>
