--- a/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
+++ b/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Trilateration" />
+      <Folder Include="NotificationService\Model" />
     </ItemGroup>
 
 </Project>
