--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -11,6 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CSharpFunctionalExtensions" Version="2.20.3" />
         <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
         <PackageReference Include="Prism.DryIoc.Extensions" Version="8.0.62" />
