--- a/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
+++ b/src/IndoorNav/ApplicationCore.App/ApplicationCore.App.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CSharpFunctionalExtensions" Version="2.20.3" />
       <PackageReference Include="Shiny.Core" Version="2.1.0.2769" />
       <PackageReference Include="Shiny.Notifications" Version="2.1.0.2769" />
       <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
