--- a/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
+++ b/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CSharpFunctionalExtensions" Version="2.20.3" />
       <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
 
