--- a/src/IndoorNav/Test.UnitTests/Test.UnitTests.csproj
+++ b/src/IndoorNav/Test.UnitTests/Test.UnitTests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CSharpFunctionalExtensions" Version="2.20.3" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="System.Reactive" Version="5.0.0" />
@@ -29,7 +30,6 @@
 
     <ItemGroup>
       <Folder Include="Data" />
-      <Folder Include="Moq" />
     </ItemGroup>
 
 </Project>
