--- a/src/IndoorNav/UseCase.DiscreteSteps/UseCase.DiscreteSteps.csproj
+++ b/src/IndoorNav/UseCase.DiscreteSteps/UseCase.DiscreteSteps.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CSharpFunctionalExtensions" Version="2.20.3" />
         <PackageReference Include="Shiny.Core" Version="2.1.0.2769" />
         <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
