Add ManagedRssiFingerprinting in UseCase

--- a/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Api.Forms.csproj
@@ -34,6 +34,7 @@
       <ProjectReference Include="..\..\Libs.BluetoothLE\Libs.BluetoothLE.csproj" />
       <ProjectReference Include="..\..\Libs.Excel\Libs.Excel.csproj" />
       <ProjectReference Include="..\..\UseCase.DiscreteSteps\UseCase.DiscreteSteps.csproj" />
+      <ProjectReference Include="..\..\UseCase.RssiFingerprinting\UseCase.RssiFingerprinting.csproj" />
       <ProjectReference Include="..\..\UseCase.Trilateration\UseCase.Trilateration.csproj" />
     </ItemGroup>
 
