--- a/src/IndoorNav/Libs.Beacons/packages.config
+++ b/src/IndoorNav/Libs.Beacons/packages.config
@@ -1,57 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.1" targetFramework="monoandroid11.0" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="monoandroid11.0" />
-  <package id="Shiny.BluetoothLE.Common" version="2.1.0.2769" targetFramework="monoandroid11.0" />
-  <package id="Shiny.Core" version="2.1.0.2769" targetFramework="monoandroid11.0" />
-  <package id="Shiny.Notifications" version="2.1.0.2769" targetFramework="monoandroid11.0" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="monoandroid11.0" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="System.Reactive" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="monoandroid11.0" />
-  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="monoandroid11.0" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Activity" version="1.2.3" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Annotation" version="1.2.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.AppCompat" version="1.3.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.AppCompat.AppCompatResources" version="1.3.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.CustomView" version="1.1.0.6" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.DrawerLayout" version="1.1.1.2" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Fragment" version="1.3.4" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.LiveData.Core" version="2.3.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Annotation.Experimental" version="1.1.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Arch.Core.Common" version="2.1.0.8" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Arch.Core.Runtime" version="2.1.0.8" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Collection" version="1.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Concurrent.Futures" version="1.1.0.2" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Core" version="1.5.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.CursorAdapter" version="1.0.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Interpolator" version="1.0.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.Common" version="2.3.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.LiveData" version="2.3.0.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.Process" version="2.3.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.Runtime" version="2.3.1.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.Service" version="2.3.0.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.ViewModel" version="2.3.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Lifecycle.ViewModelSavedState" version="2.3.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Loader" version="1.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Migration" version="1.0.8" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.MultiDex" version="2.0.1.5" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Room.Common" version="2.3.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Room.Runtime" version="2.3.0" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.SavedState" version="1.1.0.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Sqlite" version="2.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Sqlite.Framework" version="2.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.VectorDrawable" version="1.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.VectorDrawable.Animated" version="1.1.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.VersionedParcelable" version="1.1.1.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.ViewPager" version="1.0.0.7" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.AndroidX.Work.Runtime" version="2.5.0.1" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.Google.Guava.ListenableFuture" version="1.0.0.2" targetFramework="monoandroid11.0" />
-  <package id="Xamarin.ShortcutBadger" version="1.1.21" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.DependencyInjection" version="5.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.Options" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Newtonsoft.Json" version="13.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Shiny.BluetoothLE.Common" version="2.1.0.2769" targetFramework="monoandroid11.0" />
+  <package beaconId="Shiny.Core" version="2.1.0.2769" targetFramework="monoandroid11.0" />
+  <package beaconId="Shiny.Notifications" version="2.1.0.2769" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Buffers" version="4.5.1" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Reactive" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="monoandroid11.0" />
+  <package beaconId="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Activity" version="1.2.3" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Annotation" version="1.2.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.AppCompat" version="1.3.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.AppCompat.AppCompatResources" version="1.3.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.CustomView" version="1.1.0.6" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.DrawerLayout" version="1.1.1.2" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Fragment" version="1.3.4" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.LiveData.Core" version="2.3.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Annotation.Experimental" version="1.1.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Arch.Core.Common" version="2.1.0.8" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Arch.Core.Runtime" version="2.1.0.8" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Collection" version="1.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Concurrent.Futures" version="1.1.0.2" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Core" version="1.5.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.CursorAdapter" version="1.0.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Interpolator" version="1.0.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.Common" version="2.3.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.LiveData" version="2.3.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.Process" version="2.3.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.Runtime" version="2.3.1.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.Service" version="2.3.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.ViewModel" version="2.3.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Lifecycle.ViewModelSavedState" version="2.3.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Loader" version="1.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Migration" version="1.0.8" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.MultiDex" version="2.0.1.5" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Room.Common" version="2.3.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Room.Runtime" version="2.3.0" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.SavedState" version="1.1.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Sqlite" version="2.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Sqlite.Framework" version="2.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.VectorDrawable" version="1.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.VectorDrawable.Animated" version="1.1.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.VersionedParcelable" version="1.1.1.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.ViewPager" version="1.0.0.7" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.AndroidX.Work.Runtime" version="2.5.0.1" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.Google.Guava.ListenableFuture" version="1.0.0.2" targetFramework="monoandroid11.0" />
+  <package beaconId="Xamarin.ShortcutBadger" version="1.1.21" targetFramework="monoandroid11.0" />
 </packages>
