replace Kalman1DFilterWrapper in Shared prj

--- a/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
+++ b/src/IndoorNav/ApplicationCore.Domain/ApplicationCore.Domain.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <Folder Include="NotificationService\Model" />
+      <Folder Include="RssiFingerprinting\Filters" />
     </ItemGroup>
 
 </Project>
